# xavfsizmi

./: .dockerignore  .gitignore  .prettierignore  ARCHITECTURE.md  DEPLOY.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/migrations/: README  env.py
apps/api/migrations/versions/: 20260507_0343_initial_schema.py  20260507_1200_phase4_billing.py
apps/api/src/xavfsizmi_api/: __init__.py  config.py  deps.py  main.py
apps/api/src/xavfsizmi_api/core/: errors.py  i18n.py  observability.py  rate_limit.py
apps/api/src/xavfsizmi_api/db/: __init__.py  base.py  models.py  session.py
apps/api/src/xavfsizmi_api/routers/: admin.py  api_keys.py  auth.py  billing.py  breaches.py  domains.py  health.py  metrics.py  notifications.py  passwords.py  public_api.py
apps/api/src/xavfsizmi_api/services/: admin_stats.py  api_keys.py  audit.py  auth.py  billing.py  cache.py  csv_breach_import.py  domains.py  email.py  hibp_client.py  notifications.py  notifications_dispatch.py  turnstile.py  usage.py
apps/api/tests/: conftest.py  test_admin_csv_dispatch_stats.py  test_admin_router.py  test_api_keys_router.py  test_auth_router.py  test_billing_cascade.py  test_billing_router.py  test_breaches_router.py  test_domains_router.py  test_health.py  test_hibp_client.py  test_i18n.py  test_notifications_router.py  test_observability.py  test_problem_errors.py  test_usage_router.py
apps/e2e/: package.json  playwright.config.ts  tsconfig.json
apps/e2e/tests/: _helpers.ts  breaches.spec.ts  homepage.spec.ts  locale.spec.ts  passwords.spec.ts  sign-in.spec.ts
apps/web/: .env.example  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx  main.tsx  styles.css
apps/worker/: eslint.config.js  package.json  tsconfig.json  wrangler.toml
infra/: Caddyfile  Dockerfile.api  Dockerfile.web  api-entrypoint.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf  seed-pwned-passwords.md
load/: README.md  k6-breached-account.js  k6-passwords.js  k6-public-mix.js
(+32 files in other folders)
