[project]
name = "xavfsizmi-api"
version = "0.1.0"
description = "Xavfsizmi API — FastAPI backend for breach lookup, domains, notifications, and billing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.1",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "argon2-cffi>=23.1.0",
    "itsdangerous>=2.2.0",
    "cryptography>=44.0.0",
    "stripe>=11.4.1",
    "babel>=2.16.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-httpx>=0.35.0",
    "httpx>=0.28.1",
    "ruff>=0.8.6",
    "mypy>=1.14.1",
    "types-python-dateutil>=2.9.0.20241206",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xavfsizmi_api"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "N",                # pep8-naming
    "ASYNC",            # async correctness
    "C4",               # comprehensions
    "RUF",              # ruff-specific
]
ignore = [
    "E501",             # line length handled by formatter
    "RUF001",           # ambiguous chars OK in i18n (Cyrillic in ru strings)
    "RUF002",           # ditto, in docstrings
    "RUF003",           # ditto, in comments
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_unreachable = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
